<resources>
    <string name="app_name">Stoma Booking</string>
    <string name="login_description">Cauta stomatolog\nAdauga o programare\nTotul din confortul casei tale</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="login">Intra in cont</string>
    <string name="create_new_account">Creaza-ti un cont</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume</string>
    <string name="birthdate">Data de nastere</string>
    <string name="create_account">Creaza cont</string>
    <string name="profile">Profil</string>
    <string name="appointments_history">Istoric programari</string>
    <string name="associated_users">Conturi asociate</string>
    <string name="empty_associated_users">Nu exista conturi asociate</string>
    <string name="delete_associated_users_title">Stergere cont asociat</string>
    <string name="delete_associated_users_message">Sigur doresti sa stergi contul asociat: %s?</string>
    <string name="delete">Sterge</string>
    <string name="cancel">Anuleaza</string>
    <string name="add_account">Adauga cont</string>
    <string name="patient">Pacient</string>
    <string name="choose_pacient_for_appointment">Alege pentru cine doresti sa faci programarea</string>
    <string name="doctor">Doctor</string>
    <string name="choose_doctor_for_appointment">Alege doctorul la care doresti sa te programezi</string>
    <string name="service">Serviciu</string>
    <string name="choose_service_for_appointment">Alege serviciul programarii</string>
    <string name="tap_to_choose">Apasa pentru a alege</string>
    <string name="date">Data</string>
    <string name="choose_date_for_appointment">Alege data programarii</string>
    <string name="hour">Ora</string>
    <string name="choose_hour_for_appointment">Alege ora programarii</string>
    <string name="photos">Poze</string>
    <string name="upload_photos_for_appointment">Incarca poze relevante pentru programarea ta</string>
    <string name="take_picture">Fa o poza</string>
    <string name="choose_from_gallery">Alege din galerie</string>
    <string name="add_appointment">Adauga programare</string>
    <string name="appointment_history_service">Serviciu:</string>
    <string name="appointment_history_date_and_time">Data si ora:</string>
    <string name="appointment_history_duration">Durata:</string>
    <string name="appointment_history_doctor">Doctor:</string>
    <string name="appointment_history_patient">Pacient:</string>
    <string name="appointment_history_price">Pret:</string>
    <string name="empty_appointments_calendar">Nu exista programari in aceasta zi</string>
    <string name="delete_appointment_title">Stergere programare</string>
    <string name="delete_appointment_message">Sigur doresti sa stergi programarea %s a lui %s?</string>
    <string name="empty_appointments_history">Nu ai avut nicio programare in trecut</string>
    <string name="empty_chat_rooms">Apasa + pentru a incepe o noua conversatie cu unul dintre doctori</string>
    <string name="empty_chat_messages">Incepe o noua conversatie cu %s</string>
    <string name="you">Dvs.</string>
    <string name="message_hint">Scrie un mesaj…</string>
    <string name="notification_title">Programare</string>
    <string name="notification_description">Programarea la Dr. %s este la ora %s</string>

    <string name="error_email_must_be_filled">Email-ul trebuie completat</string>
    <string name="error_email_wrong_format">Email-ul nu are formatul corect</string>
    <string name="error_password_must_be_filled">Parola trebuie completata</string>
    <string name="error_password_length">Parola trebuie sa contina cel putin 8 caractere</string>
    <string name="error_incorrect_email_or_password">Email sau parola gresite</string>
    <string name="error_first_name_must_be_filled">Prenumele trebuie completat</string>
    <string name="error_last_name_must_be_filled">Numele trebuie completat</string>
    <string name="error_birthdate_must_be_filled">Data de nastere trebuie completata</string>
    <string name="error_choose_doctor_for_appointment">Alege un doctor pentru programare</string>
    <string name="error_choose_service_for_appointment">Alege un serviciu pentru programare</string>
    <string name="error_choose_hour_for_appointment">Alege ora programarii</string>
</resources>