<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="30dp"
        android:paddingHorizontal="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:text="@string/app_name" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/pink"
            app:cardCornerRadius="8dp"
            app:cardElevation="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/login_description" />
        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:cornerRadius="12dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/pink"
            app:strokeWidth="3dp"
            app:cornerRadius="12dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/create_new_account" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black_transparent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            app:indicatorColor="@color/pink" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>