<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".activities.RegisterActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/transparent"
        app:tint="@color/black"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="42dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/ibBack"
        app:layout_constraintStart_toEndOf="@id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ibBack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:paddingHorizontal="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/first_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etBirthdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="date"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/birthdate"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <View
                    android:id="@+id/vBirthdate"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                app:cornerRadius="12dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/create_account" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>