<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".activities.AddAppointmentActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/transparent"
        app:tint="@color/black"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="42dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/ibBack"
        app:layout_constraintStart_toEndOf="@id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ibBack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPatientTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/patient"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvPatientSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/choose_pacient_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/tvPatientTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvPatientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvPatientSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvPatientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Ana Popescu" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDoctorTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/doctor"
                app:layout_constraintTop_toBottomOf="@id/mcvPatientName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvDoctorSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/choose_doctor_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/tvDoctorTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvDoctorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvDoctorSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvDoctorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/tap_to_choose" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvServiceTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/service"
                app:layout_constraintTop_toBottomOf="@id/mcvDoctorName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvServiceSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/choose_service_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/tvServiceTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvServiceSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/tap_to_choose" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/date"
                app:layout_constraintTop_toBottomOf="@id/mcvService"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvDateSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/choose_date_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/tvDateTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvDateSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="15.03.2023" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvHourTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/hour"
                app:layout_constraintTop_toBottomOf="@id/mcvDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvHourSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/choose_hour_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/tvHourTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvHourSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/row_selectable_text"
                tools:itemCount="5" />

            <TextView
                android:id="@+id/tvPhotosTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/photos"
                app:layout_constraintTop_toBottomOf="@id/rvHours"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvAddPhoto"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="@id/tvPhotosTitle"
                app:layout_constraintStart_toEndOf="@id/tvPhotosTitle"
                app:layout_constraintBottom_toBottomOf="@id/tvPhotosTitle" >

                <ImageView
                    android:id="@+id/ivAddPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    app:tint="@color/white"
                    android:src="@drawable/ic_add"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvPhotosSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/upload_photos_for_appointment"
                app:layout_constraintTop_toBottomOf="@id/mcvAddPhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPhotos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvPhotosSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/row_photo"
                tools:itemCount="5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddAppointment"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                app:cornerRadius="12dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/add_appointment"
                app:layout_constraintTop_toBottomOf="@id/rvPhotos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>